Fix gap

--- a/assets/css/blog/hydra.css
+++ b/assets/css/blog/hydra.css
@@ -201,4 +201,5 @@ a.block {
 .article-cover {
     aspect-ratio: 2/1;
     object-fit: cover;
+    margin-bottom: 1rem;
 }
